# shelldon

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json
src/: api.js  index.html  main.js  navigation.js  refactor.js  split_js.js  state.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  config.rs  core.rs  main.rs  terminal.rs
src-tauri/src/terminal/: mod.rs  utils.rs
src-tauri/src/terminal/linux/: gnome.rs  mod.rs  tmux.rs
src-tauri/src/terminal/mac/: iterm2.rs  mod.rs  terminal_app.rs
src-tauri/src/terminal/windows/: mod.rs  powershell.rs  wt.rs
src/components/: modal.html  modal.js  toast.html  toast.js
src/pages/: new.html  new.js  projects.html  projects.js  settings.html  settings.js
src/styles/: main.css
