[package]
name = "shelldon"
version = "0.1.0"
description = "ShellDon — Developer Workspace Launcher"
authors = ["ShellDon"]
edition = "2021"
default-run = "shelldon"

[[bin]]
name = "shelldon"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri       = { version = "1.6", features = ["shell-open", "shell-execute", "dialog-open", "fs-read-file", "fs-write-file", "fs-create-dir", "path-all"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.4", features = ["derive"] }
dirs        = "5.0"
thiserror   = "1.0"
anyhow      = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
